--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"Other"
 	],
 	"activationEvents": [
+		"onCommand:vscode-clear-working-tree-tabs.clearEditors"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
