--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,11 +10,14 @@
     ],
     "rules": {
         "@typescript-eslint/naming-convention": "warn",
-        "@typescript-eslint/semi": "warn",
+        "@typescript-eslint/semi": [
+            "error",
+            "never"
+        ],
         "curly": "warn",
         "eqeqeq": "warn",
         "no-throw-literal": "warn",
-        "semi": "off"
+        "semi": ["error", "never"]
     },
     "ignorePatterns": [
         "out",
